feat: Added updatechecker chat messages